# reweave

./: .gitignore  AGENTS.md  CODEX-HANDOFF.md  Cargo.toml  README.md
docs/: design.md  literate-programming-lessons.md
examples/: hello.md  macro.md
reweave-cli/: Cargo.toml
reweave-cli/src/: main.rs
reweave-cli/tests/: cli.rs
reweave-core/: Cargo.toml
reweave-core/src/: lib.rs
reweave-macro/: Cargo.toml
reweave-macro/src/: lib.rs  line_index.rs  macro_api.rs  types.rs
reweave-macro/src/ast/: build.rs  mod.rs  serialization.rs  strip.rs  tests.rs
reweave-macro/src/ast/tests/: node_kinds.rs  params_basic.rs  params_dfa.rs  params_nested.rs  pipeline.rs  serialization.rs  strip_comments.rs
reweave-macro/src/evaluator/: builtins.rs  case_conversion.rs  core.rs  errors.rs  eval_api.rs  lexer_parser.rs  mod.rs  monty_eval.rs  output.rs  state.rs
reweave-macro/src/evaluator/builtins/: control.rs  definition.rs  include.rs  predicates.rs  scope.rs  stores.rs  strings.rs  util.rs
reweave-macro/src/evaluator/core/: accessors.rs  do_include.rs  evaluate.rs  evaluate_to.rs  export.rs  extract_name.rs  macro_call.rs  macro_call_to.rs  node_text.rs  parse_include.rs  py_store.rs  source.rs  state_delegates.rs  tracing.rs
reweave-macro/src/evaluator/output/: plain.rs  precise.rs  tracing.rs  types.rs
reweave-macro/src/evaluator/tests/: mod.rs  test_builtins_misc.rs  test_case_conversion.rs  test_case_modifiers.rs  test_core.rs  test_def.rs  test_env.rs  test_eval_api.rs  test_export.rs  test_if.rs  test_include.rs  test_lexer_parser.rs  test_macro_api.rs  test_macros.rs  test_monty_eval.rs  test_output.rs  test_pydef.rs  test_raw_scripts.rs  test_set.rs  test_skill_examples.rs  test_state.rs  test_utils.rs
reweave-macro/src/lexer/: cursor.rs  emit.rs  mod.rs  run.rs  sigil.rs  states.rs  tests.rs
reweave-macro/src/lexer/tests/: blocks_vars_realworld.rs  completion_boundaries.rs  core_tokens.rs  errors_comments.rs  smoke.rs  unicode_sigil.rs  verbatim.rs
reweave-macro/src/line_index/: tests.rs
reweave-macro/src/parser/: api.rs  arena.rs  handlers.rs  mod.rs  parse.rs  tests.rs  token_io.rs
reweave-macro/src/parser/tests/: basic.rs  invariants.rs  lex_errors.rs  tagged_errors.rs  tagged_valid.rs
reweave-tangle/: Cargo.toml
reweave-tangle/src/: lib.rs
scripts/: check-coverage.sh
