[workspace]
resolver = "2"
members = [
    "reweave-core",
    "reweave-macro",
    "reweave-tangle",
    "reweave-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Gianni Ferrarotti <gianni.ferrarotti@gmail.com>"]
license = "0BSD OR MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
escargot = "0.5"
lazy_static = "1.4"
memchr = "2"
miette = { version = "7", features = ["fancy"] }
monty = { git = "https://github.com/pydantic/monty", tag = "v0.0.17" }
predicates = "3.0"
pretty_assertions = "1.4"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
thiserror = "2.0"
walkdir = "2"
wasm-bindgen = "0.2.84"

reweave-core = { path = "reweave-core" }
reweave-macro = { path = "reweave-macro" }
reweave-tangle = { path = "reweave-tangle" }
