[package]
name = "reweave"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Forward-only Markdown macro/tangle tool"

[dependencies]
anyhow.workspace = true
clap.workspace = true
miette.workspace = true
reweave-core.workspace = true
reweave-macro.workspace = true
reweave-tangle.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "reweave"
path = "src/main.rs"
