[package]
name = "reweave-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Macro processing library for Reweave"

[dependencies]
reweave-core.workspace = true
memchr.workspace = true
clap.workspace = true
thiserror.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
lazy_static.workspace = true
chrono.workspace = true
monty.workspace = true
wasm-bindgen.workspace = true
tempfile.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }
